tests/examples/snapshots/fail/sorts/uncalled.fly.cvc5.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/uncalled.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: r expected args but didn't get them
  ┌─ tests/examples/fail/sorts/uncalled.fly:7:1
  │
7 │ assert forall x:s. r = x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^


